# mcpx

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/ci/: mcpx-baseline.json  mcpx-target.json
.github/workflows/: ci.yml  dependency-review.yml  release.yml  security-audit.yml
crates/mcpx-cli/: Cargo.toml
crates/mcpx-cli/src/: interceptor.rs  main.rs
crates/mcpx-cli/src/commands/: baselines.rs  ci.rs  diff.rs  events.rs  mod.rs  run.rs  shims.rs
crates/mcpx-core/: Cargo.toml
crates/mcpx-core/src/: jsonrpc.rs  lib.rs  mcp.rs  snapshot.rs
crates/mcpx-poison/: Cargo.toml
crates/mcpx-poison-ml/: Cargo.toml
crates/mcpx-poison-ml/src/: embedder.rs  lib.rs  tokenize.rs
crates/mcpx-poison/src/: lib.rs  patterns.rs  structural.rs
crates/mcpx-schema/: Cargo.toml
crates/mcpx-schema/src/: classify.rs  diff.rs  lib.rs  shim.rs
crates/mcpx-store/: Cargo.toml
crates/mcpx-store/src/: lib.rs
crates/mcpx-transport/: Cargo.toml
crates/mcpx-transport/src/: http.rs  lib.rs  proxy.rs  stdio.rs
