[package]
name = "mcpx-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite storage for mcpx baselines, snapshots, and audit logs"

[dependencies]
mcpx-core = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
