[package]
name = "mcpx-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "stdio and HTTP transport layer for mcpx proxy"

[dependencies]
mcpx-core = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"
futures-util = "0.3"
